# learn-fastapi

./: .gitignore  alembic.ini  config.py  containers.py  database.py  database_models.py  main.py  pyproject.toml
common/: auth.py  messaging.py
example/ch06_02/: async_ex.py  sync_ex.py
example/ch10_01/: background_task.py
example/ch10_02/: celery_result.py  celery_task.py  deserialize_result.py
migrations/: env.py
migrations/versions/: 2025_04_15_0041-f2bf4969de1d_add_user_table.py  2025_04_15_0049-8868d7794d55_add_user_table.py  2025_04_15_0051-2fb0f2d51250_add_user_table.py
note/application/: note_service.py
note/domain/: note.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py  db_utils.py
